--- a/projects.html
+++ b/projects.html
@@ -76,10 +76,10 @@
                     <img src="Web_Sequence_Diagram.JPG" alt="Web Sequence Diagram">
                         </div>
                         <div class= "Network-Model">
-                            <img src="NetworkModel.jpg" alt="Network Model">
+                            <img src="NetWorkModel.jpg" alt="Network Model">
                         </div>
                         <div class= "Network-Model-Result">
-                            <img src="NetWorkModelResult.jpg" alt="Network Model">
+                            <img src="NetWorkModelResult.JPG" alt="Network Model">
                         </div>
 
 
